[tool.poetry]
name = "langchain-code-assistant"
version = "0.1.0"
description = ""
authors = ["Alonso Isidoro Román <alonsoir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-community = "^0.2.0"
langchain-openai = "^0.1.7"
langchain-anthropic = "^0.1.13"
langchain = "^0.2.0"
langgraph = "^0.0.54"
bs4 = "^0.0.2"
black = "^24.4.2"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"
langsmith = "^0.1.60"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
